# Library-Management-System-2022.12-

./: ReadMe.md
Library_Manage_System/: book.c  book.h  catagory_management.c  catagory_management.h  data_io.c  data_io.h  data_list.h  data_lists.c  main.c  menu.c  menu.h  option.c  option.h
Library_Manage_System (项目文件)/: CMakeLists.txt  data_io.c  data_lists.c  main.c  menu.h  option.h
所做项目及实验报告文件/: 课程设计报告 3122009245 谷岩.docx
流程、架构图/: 图书管理系统架构图.vsdx
程序及运行环境/: ReadMe.txt
程序及运行环境/data/: data_load.txt  data_save.txt
项目文件/Library_Manage_System/: book.h  catagory_management.c  data_io.h  menu.c
